examples/errors/class_init_error_type/main.lc


class A {

  name: string

}

function main () {
  let a = A {
    name: 3,
  };
}
